syntax = "proto3";
package twist_service;

import public "google/protobuf/empty.proto";

option java_multiple_files = true;
//option java_package = "org.athenian.grpc";

message TwistData {
    double linear_x = 1;
    double linear_y = 2;
    double linear_z = 3;
    double angular_x = 4;
    double angular_y = 5;
    double angular_z = 6;
}

service TwistService {
    rpc writeTwistData (TwistData) returns (google.protobuf.Empty) {
    }

    rpc streamTwistData (stream TwistData) returns (google.protobuf.Empty) {
    }
}
